# lsu-pilot

./: pyproject.toml
lsu_pilot/: main.py  questions.py
lsu_pilot/embedding/: embed.py
