[tool.poetry]
name = "lsu-pilot"
version = "0.1.0"
description = ""
authors = ["Dirk Haupt <prize-saggy-royal@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.52.0"
python-dotenv = "^1.0.1"
telegram = "^0.0.1"
python-telegram-bot = "^21.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
